--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,4 @@ set(TEST_SOURCES
 )
 
 add_executable(test ${TEST_SOURCES})
-target_link_libraries(test tdse gtest_main)
+target_link_libraries(test tdse gtest_main, ${MPI_C_LIBRARIES})
