--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -4,7 +4,7 @@ set(BENCHMARK_SOURCES
 
 if (CUDA_FOUND)
 	set(BENCHMARK_GPU_SOURCES
-		"wf_array_gpu.cpp"
+		"ws_wf_array.cpp"
 		)
 endif()
 
@@ -12,4 +12,4 @@ add_executable(benchmarks ${BENCHMARK_SOURCES})
 target_link_libraries(benchmarks tdse benchmark::benchmark ${MPI_C_LIBRARIES})
 
 add_executable(benchmarks_gpu ${BENCHMARK_GPU_SOURCES})
-target_link_libraries(benchmarks tdse tdse_gpu benchmark::benchmark ${MPI_C_LIBRARIES})
+target_link_libraries(benchmarks_gpu tdse tdse_gpu benchmark::benchmark ${MPI_C_LIBRARIES})
