--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(benchmarks ${BENCHMARK_SOURCES})
 target_link_libraries(benchmarks tdse benchmark::benchmark ${MPI_C_LIBRARIES})
 
 add_executable(bm_wf_array_cpu "ws_wf_array_cpu.cpp")
-target_link_libraries(bm_wf_array_cpu tdse lapacke benchmark::benchmark ${MPI_C_LIBRARIES})
+target_link_libraries(bm_wf_array_cpu tdse lapacke mpi_cxx benchmark::benchmark ${MPI_C_LIBRARIES})
 
 if (CUDA_FOUND)
 	cuda_add_executable(benchmarks_gpu ${BENCHMARK_GPU_SOURCES})
